force-app/main/default/objects/CRMforNonProfit__Pledge__c/CRMforNonProfit__Pledge__c.object-meta.xml
<CustomObject>
    <label>Pledge</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Pledge ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pledges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>