force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Account__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pledges</relationshipLabel>
    <relationshipName>Pledges</relationshipName>
    <type>Lookup</type>
</CustomField>