force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Bank_Account_Name__c</fullName>
    <label>Bank Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>