force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Campaign__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Pledges</relationshipLabel>
    <relationshipName>Pledges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>