force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Contact__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pledges</relationshipLabel>
    <relationshipName>Pledges</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>