force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Darujme_cz_ID__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Darujme_cz_ID__c</fullName>
    <label>Darujme.cz ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>