force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Darujme_cz_Status__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Darujme_cz_Status__c</fullName>
    <label>Darujme.cz Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>