force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Darujme_ID__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Darujme_ID__c</fullName>
    <description>Identifikátor transakce v systému darujme.</description>
    <label>Darujme ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>