force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Inbound_Account_Num__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Inbound_Account_Num__c</fullName>
    <label>Inbound Account Num.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>