force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Pledge_Amount__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Pledge_Amount__c</fullName>
    <label>Pledge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>