force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Pledge_Comment__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Pledge_Comment__c</fullName>
    <label>Pledge Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>