force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Pledge_Date__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Pledge_Date__c</fullName>
    <label>Pledge Date</label>
    <type>Date</type>
</CustomField>