force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Recurrent__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Recurrent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurrent</label>
    <type>Checkbox</type>
</CustomField>