force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Source_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Source_Account_Number__c</fullName>
    <description>Z účtu číslo</description>
    <label>Source Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>