force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Target_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Target_Account_Number__c</fullName>
    <description>Na účet číslo</description>
    <label>Target Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>