force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Transaction_Status__c</fullName>
    <label>Pledge Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Promised</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>