force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>peněžní dar</fullName>
            </value>
            <value>
                <fullName>nepeněžní dar</fullName>
            </value>
            <value>
                <fullName>členský příspěvek</fullName>
            </value>
            <value>
                <fullName>dotace/grant</fullName>
            </value>
            <value>
                <fullName>protiplnění</fullName>
            </value>
            <value>
                <fullName>ostatní</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>