force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__Type__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>