force-app/main/default/objects/CRMforNonProfit__Pledge__c/fields/CRMforNonProfit__VyzvaId__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__VyzvaId__c</fullName>
    <label>Darujme.cz Výzva Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>