force-app/main/default/objects/CRMforNonProfit__Pledge__c/listViews/CRMforNonProfit__All.listView-meta.xml
<ListView>
    <fullName>CRMforNonProfit__All</fullName>
    <columns>CRMforNonProfit__Campaign__c</columns>
    <columns>CRMforNonProfit__Contact__c</columns>
    <columns>CRMforNonProfit__Darujme_cz_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>